# cmakgen

./: CMakeLists.txt  LICENSE  PKGBUILD
include/: basecmakesettings.h  cmakefile.h  cmakefunction.h  cmakegenerator.h  cmakelibrary.h  cmakepackage.h  cmakeproject.h  commandlineutils.h  fileutils.h
include/parser/: cmakeparser.h  cmlistfilelexer.h
include/writer/: cmakewriter.h
src/: basecmakesettings.cpp  cmakefile.cpp  cmakefunction.cpp  cmakegenerator.cpp  cmakelibrary.cpp  cmakepackage.cpp  cmakeproject.cpp  commandlineutils.cpp  fileutils.cpp  main.cpp
src/parser/: cmakeparser.cpp  cmlistfilelexer.c
src/writer/: cmakewriter.cpp
